RESOLVED FIXED264936
[WPE][GTK] http/wpt/webrtc/transfer-datachannel-service-worker.https.html is flaky crash
https://bugs.webkit.org/show_bug.cgi?id=264936
Summary [WPE][GTK] http/wpt/webrtc/transfer-datachannel-service-worker.https.html is ...
Philippe Normand
Reported 2023-11-16 03:14:18 PST
Thread 1 (Thread 0x7f1558f60ec0 (LWP 187512)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f156a577c91 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f156acae3fd in IPC::ArgumentCoder<WebCore::RTCDataChannelState, void>::encode<IPC::Encoder>(IPC::Encoder&, WebCore::RTCDataChannelState) (encoder=..., value=79) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ArgumentCoder.h:122 #3 0x00007f156b3867c5 in IPC::Encoder::operator<< <WebCore::RTCDataChannelState>(WebCore::RTCDataChannelState&&) (this=0x7f154f0756c0, t=@0x7ffcd5a34480: 79) at /app/webkit/Source/WebKit/Platform/IPC/Encoder.h:82 #4 0x00007f156b384832 in IPC::ArgumentCoder<std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>, void>::encode<IPC::Encoder, std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>, 0ul, 1ul>(IPC::Encoder&, std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>&&, std::integer_sequence<unsigned long, 0ul, 1ul>) (encoder=..., tuple=...) at /app/webkit/Source/WebKit/Platform/IPC/ArgumentCoders.h:375 #5 0x00007f156b382bc5 in IPC::ArgumentCoder<std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>, void>::encode<IPC::Encoder, std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState> >(IPC::Encoder&, std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>&&) (encoder=..., tuple=...) at /app/webkit/Source/WebKit/Platform/IPC/ArgumentCoders.h:368 #6 0x00007f156b38085c in IPC::Encoder::operator<< <std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState> >(std::tuple<WebCore::RTCDataChannelIdentifier const&, WebCore::RTCDataChannelState>&&) (this=0x7f154f0756c0, t=...) at /app/webkit/Source/WebKit/Platform/IPC/Encoder.h:82 #7 0x00007f156bc63a47 in IPC::Connection::send<Messages::RTCDataChannelRemoteManagerProxy::ChangeReadyState>(Messages::RTCDataChannelRemoteManagerProxy::ChangeReadyState&&, unsigned long, WTF::OptionSet<IPC::SendOption>, std::optional<WTF::Thread::QOS>) (this=0x7f154f0603c0, message=..., destinationID=0, sendOptions=..., qos=std::optional<WTF::Thread::QOS> [no contained value]) at /app/webkit/Source/WebKit/Platform/IPC/Connection.h:685 #8 0x00007f156bc5c41e in WebKit::RTCDataChannelRemoteManager::RemoteSourceConnection::didChangeReadyState(WebCore::RTCDataChannelIdentifier, WebCore::RTCDataChannelState) (this=0x7f154f3dd1e0, identifier=..., state=79) at /app/webkit/Source/WebKit/WebProcess/Network/webrtc/RTCDataChannelRemoteManager.cpp:223 #9 0x00007f1570605c13 in WebCore::RTCDataChannelRemoteSource::didChangeReadyState(WebCore::RTCDataChannelState) (this=0x7f154f123f80, state=79) at /app/webkit/Source/WebCore/Modules/mediastream/RTCDataChannelRemoteSource.h:51 #10 0x00007f157066f615 in operator()() const (__closure=0x7f154f475d48) at /app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:285 #11 0x00007f1570678372 in WTF::Detail::CallableWrapper<WebCore::GStreamerDataChannelHandler::checkState()::<lambda()>, void>::call(void) (this=0x7f154f475d40) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #12 0x00007f156aef9c41 in WTF::Function<void ()>::operator()() const (this=0x7ffcd5a345a0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #13 0x00007f156e34f837 in WTF::RunLoop::performWork() (this=0x7f154f0180c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #14 0x00007f156e403972 in operator()(gpointer) const (__closure=0x0, userData=0x7f154f0180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #15 0x00007f156e403996 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #16 0x00007f156e403905 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x560b0d988e50, callback=0x7f156e403979 <_FUN(gpointer)>, userData=0x7f154f0180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #17 0x00007f156e403953 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #18 0x00007f155faff527 in g_main_dispatch (context=0x560b0d988cf0) at ../glib/gmain.c:3460 #19 g_main_context_dispatch (context=0x560b0d988cf0) at ../glib/gmain.c:4200 #20 0x00007f155fb5c888 in g_main_context_iterate.constprop.0 (context=0x560b0d988cf0, block=<optimized out>, dispatch=1, self=<optimized out>) at ../glib/gmain.c:4276 #21 0x00007f155fafed7f in g_main_loop_run (loop=0x560b0d988e30) at ../glib/gmain.c:4479 #22 0x00007f156e403fc6 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #23 0x00007f156beda679 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffcd5a34870, argc=4, argv=0x7ffcd5a34a38) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #24 0x00007f156bed7717 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffcd5a34a38) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #25 0x00007f156bed41d3 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffcd5a34a38) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #26 0x0000560b0c1f38e9 in main(int, char**) (argc=4, argv=0x7ffcd5a34a38) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31 STDERR: ASSERTION FAILED: WTF::isValidEnum<T>(WTF::enumToUnderlyingType<T>(value)) STDERR: /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ArgumentCoder.h(122) : static void IPC::ArgumentCoder<T, typename std::enable_if<is_enum_v<T>, void>::type>::encode(Encoder&, T) [with Encoder = IPC::Encoder; T = WebCore::RTCDataChannelState]
Attachments
Philippe Normand
Comment 1 2024-09-10 07:11:52 PDT
EWS
Comment 2 2024-09-11 02:18:53 PDT
Committed 283475@main (247b93cbae5e): <https://commits.webkit.org/283475@main> Reviewed commits have been landed. Closing PR #33400 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.