[WPE][GTK] http/wpt/webrtc/transfer-datachannel-service-worker.https.html is flaky crash https://bugs.webkit.org/show_bug.cgi?id=264936

Reviewed by Xabier Rodriguez-Calvar.

Avoid calling didChangeReadyState with an uninitialized readyState.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerDataChannelHandler.cpp:
(WebCore::GStreamerDataChannelHandler::checkState):

Canonical link: https://commits.webkit.org/283475@main